# griden

./: .gitignore  CONTRIBUTING.md  LICENSE-MIT  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/scripts/: README.md  macos-dev-runner.sh  setup-dev-cert.sh
src-tauri/src/: connection.rs  edits.rs  error.rs  introspection.rs  lib.rs  main.rs  models.rs  tunnel.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/drivers/: mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
src/components/connections/: ConnectionDialog.tsx
src/components/editor/: SqlEditor.tsx
src/components/erd/: ErdView.tsx  TableErdNode.tsx
src/components/explorer/: ConnectionTree.tsx
src/components/history/: HistoryPanel.tsx
src/components/layout/: ActivityBar.tsx  ExplorerPanel.tsx  StatusBar.tsx  Workspace.tsx
src/components/results/: CellValueDialog.tsx  FilterBar.tsx  ResultsGrid.tsx
src/components/ui/: scroll-area.tsx
src/lib/: export.ts  format.ts  ipc.ts  platform.ts  query.ts  sql.ts  sqlStatements.ts  tableTab.ts
src/stores/: connections.ts  editor.ts
src/types/: index.ts
