[package]
name = "griden"
version = "0.1.0"
description = "Griden — a fast, modern open-source database client"
authors = ["Griden contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "griden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
futures-util = "0.3"

# Errors / utils
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1"

# Databases (sqlx for pg/mysql/sqlite, tiberius for mssql)
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "mysql",
  "sqlite",
  "chrono",
  "uuid",
  "json",
  "rust_decimal",
  "bigdecimal",
] }
tiberius = { version = "0.12", default-features = false, features = [
  "tds73",
  "rustls",
  "chrono",
  "rust_decimal",
] }

# SSH tunneling (cliente SSH puro em Rust, sem deps de sistema)
russh = "0.61"
tauri-plugin-dialog = "2.7.1"

# OS keychain for credentials (platform-specific backends)
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
# Same gtk version that `tao` resolves (cargo tree -p gtk) so we don't pull a
# second gtk-sys / incompatible types. Used to mirror the GNOME button-layout.
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

